app/main/default/objects/TASKRAY__trProjectInboxNotification__c/fields/TASKRAY__trNotificationDate__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>TASKRAY__trNotificationDate__c</fullName>
        <label>Notification Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>