app/main/default/objects/TASKRAY__trProjectInboxNotification__c/fields/TASKRAY__trNotificationText__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>TASKRAY__trNotificationText__c</fullName>
        <label>Notification Text</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>