app/main/default/objects/TASKRAY__trProjectInboxNotification__c/fields/TASKRAY__trTaskRayProject__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>TASKRAY__trTaskRayProject__c</fullName>
        <label>TaskRay Project</label>
        <referenceTo>TASKRAY__Project__c</referenceTo>
        <relationshipLabel>TaskRay Project Inbox Notifications</relationshipLabel>
        <relationshipName>TaskRay_Project_Inbox_Notifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>